# VsToVsCode

./: separate.py  test_watcher.py
test/: CMakeLists.txt
